<resources>
    <string name="app_name">FamilyPlanner</string>
    <string name="title">Семейный планировщик</string>
    <string name="start">Начать</string>
    <string name="ready">Готово</string>
    <string name="cancel">Отмена</string>
    <string name="next">Продолжить</string>
    <string name="enter">Войти</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="has_account">Уже есть аккаунт? <u>Войти</u></string>
    <string name="promo_text">Отслеживайте задачи, мероприятия, списки покупок и местоположение своих близких в одном приложении! </string>
    <string name="enter_email">Введите адрес электронной почты:</string>
    <string name="enter_code">Проверьте почту и введите код подтверждения:</string>
    <string name="code">Код</string>
    <string name="back">Назад</string>
    <string name="almost_ready">Почти готово!</string>
    <string name="additional_info">Осталось ввести информацию о себе и пароль</string>
    <string name="name">Имя</string>
    <string name="birthday">Дата рождения</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="no_family">Вы пока ещё не вступили в семью</string>
    <string name="join">Присоединиться</string>
    <string name="common">Общие</string>
    <string name="personal">Личные</string>
    <string name="map">Карта</string>
    <string name="calendar">Календарь</string>
    <string name="lists">Списки</string>
    <string name="create">Создать</string>
    <string name="members">Участники</string>
    <string name="applications">Заявки</string>
    <string name="family_code">Код для присоединения:</string>
    <string name="profile">Мой профиль</string>
    <string name="tasks_settings">Настройки задач</string>
    <string name="more">Ещё</string>
    <string name="family">Семья</string>
    <string name="leave">Покинуть</string>
    <string name="delete">Удалить</string>
    <string name="change_email"><u>Сменить почту</u></string>
    <string name="change_password"><u>Сменить пароль</u></string>
    <string name="exit">Выход</string>
    <string name="no_tasks">Все задачи выполнены! Теперь можно насладиться заслуженным отдыхом</string>
    <string name="new_task">Новая задача</string>
    <string name="task_title">Название</string>
    <string name="deadline">Срок исполнения</string>
    <string name="continuous_task">Длительная задача</string>
    <string name="start_time">Время начала: </string>
    <string name="finish_time">Время окончания: </string>
    <string name="repeat_task">Повторять задачу: </string>
    <string name="once">один раз</string>
    <string name="every_day">каждый день</string>
    <string name="every">каждые</string>
    <string name="days">дней</string>
    <string name="certain_days_of_week">в определённые дни недели</string>
    <string name="monday">Пн.</string>
    <string name="tuesday">Вт.</string>
    <string name="wednesday">Ср.</string>
    <string name="thursday">Чт.</string>
    <string name="friday">Пт.</string>
    <string name="saturday">Сб.</string>
    <string name="sunday">Вс.</string>
    <string name="repeat_starting_with">Повторять задачу с:</string>
    <string name="importance">Важность задачи:</string>
    <string name="low">Низкая</string>
    <string name="medium">Средняя</string>
    <string name="high">Высокая</string>
    <string name="add_location">Привязать к локации</string>
    <string name="attach_file">Прикрепить файл</string>
    <string name="task_added">Задача создана! \nВы можете выбрать, кто может её просматривать: </string>
    <string name="choose_task_executors">Назначьте исполнителей задачи:</string>
    <string name="subtasks">Подзадачи</string>
    <string name="attached_files">Приложенные файлы</string>
    <string name="who_sees_task">Кому доступна задача</string>
    <string name="executors">Исполнители</string>
    <string name="become_executor">Взять задачу на себя</string>
    <string name="comments">Комментарии</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="task">Задача</string>
    <string name="notifications">Уведомления</string>
    <string name="notify_about_task">Напоминать о задаче</string>
    <string name="notify_every_day">напоминать каждый день</string>
    <string name="notify_around_task">Напоминать о задаче в радиусе нахождения её локации</string>
    <string name="radius">Радиус:</string>
    <string name="metres">метров</string>
    <string name="make_executor">Сделать исполнителем</string>
    <string name="sort_by">Сортировать по:</string>
    <string name="importance_asc">важности <b>↑</b></string>
    <string name="importance_desc">важности <b>↓</b></string>
    <string name="deadline_asc">дедлайну <b>↑</b></string>
    <string name="deadline_desc">дедлайну <b>↓</b></string>
    <string name="filter_executors">Исполнители задачи:</string>
    <string name="has_location">Привязана к локации: </string>
    <string name="has_deadline">Есть дедлайн: </string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="new_event">Новое мероприятие</string>
    <string name="description">Описание</string>
    <string name="who_sees_event">Кому доступно мероприятие</string>
    <string name="date">Дата: </string>
    <string name="event">Мероприятие</string>
    <string name="time">Время: </string>
    <string name="event_participation">Участвую в мероприятии </string>
    <string name="cancel_event">Отменить мероприятие </string>
    <string name="start_date">Начало: </string>
    <string name="finish_date">Окончание: </string>
    <string name="delete_task">Удалить задачу</string>
    <string name="history">История</string>
    <string name="stats">Статистика</string>
    <string name="spendings">Траты</string>
    <string name="spendings_list">Список трат </string>
    <string name="sum">Сумма: </string>
    <string name="new_list">Новый список</string>
</resources>